# shortstack

./: .README.md.swp  .gitignore  .mailmap  .travis.yaml  .travis.yml  AUTHORS  ChangeLog  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
shortstack/: __init__.py  builder.py  cli.py  config.py  filesystem.py  routing.py  server.py  url_manipulation.py  utility.py  views.py  wsgi.py
shortstack/tests/: __init__.py  test_builder.py  test_cli.py  test_config.py  test_filesystem.py  test_routing.py  test_url_manipulation.py  test_utility.py  test_views.py  test_wsgi.py
shortstack/tests/testproject/: fake.ridiculousextension
shortstack/tests/testproject/_layouts/: base.html
