[metadata]
name = shortstack
author = CFPB
author-email = tech@consumerfinance.gov
summary = An extensible site rendering system
description-file = README.rst
license = Public Domain (CC 0)
version = 0.1
[files]
packages =
    shortstack
[entry_points]
console_scripts =
    shorts = shortstack.cli:run_cli
